Bug 331956 - taskbar entry title not always updating
Summary: taskbar entry title not always updating
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
: 333030 333430 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-03-10 12:36 UTC by Marco Martin
Modified: 2014-05-15 15:36 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
example (75.62 KB, image/png)
2014-03-30 15:12 UTC, Bhushan Shah
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Martin 2014-03-10 12:36:16 UTC
when a window title changes, not always the taskbar entry updated accordingly

Reproducible: Always

Steps to Reproduce:
1. load two tabs in a browser (chromium, firefox..)
2. switch between tabs
3. the window title updates to the currently open website, the taskbar entry doesn't
Comment 1 Bhushan Shah 2014-03-10 14:12:14 UTC
Yes, even thumbnail gets updated but title does not update always.
Comment 2 Martin Klapetek 2014-03-24 12:07:05 UTC
Seems fixed.
Comment 3 Marco Martin 2014-03-24 12:08:44 UTC
do we know when or was completely random?
Comment 4 Martin Klapetek 2014-03-24 12:17:57 UTC
I do not, I just noticed it was fixed sometime last week.
Comment 5 Bhushan Shah 2014-03-30 15:10:45 UTC
Hmm, it happens now..
Comment 6 Bhushan Shah 2014-03-30 15:12:08 UTC
Created attachment 85853 [details]
example
Comment 7 Martin Klapetek 2014-04-02 13:44:22 UTC
Today's build fixed again (no idea what exactly tho). Tested on two machines.
Comment 8 Bhushan Shah 2014-04-02 17:15:42 UTC
Well so its totally random.. I think one needs investigate what actually is happening...
Comment 9 Eike Hein 2014-04-02 17:18:33 UTC
Didn't mgraesslin recently push some changes in KWindowSystem that aimed at resolving this?
Comment 10 Martin Flöser 2014-04-02 18:02:32 UTC
(In reply to comment #9)
> Didn't mgraesslin recently push some changes in KWindowSystem that aimed at
> resolving this?

recently? Rather months ago. KWin btw. picks up the changes to the window title correctly. KWindowSystem and KWin are both using the NETWM classes. I can try adding an explicit unit test for KWindowSystem::changed signal on the case of window caption changed.
Comment 11 Martin Flöser 2014-04-03 05:50:56 UTC
An explanation could be:
QWARN  : KWindowSystemX11Test::testWindowTitleChanged() kwindowsystemx11test(3760)/(default) ?[31mQSignalSpy::initArgs?[0m: Don't know how to handle 'WId', use qRegisterMetaType to register it.
QWARN  : KWindowSystemX11Test::testWindowTitleChanged() kwindowsystemx11test(3760)/(default) ?[31mQSignalSpy::initArgs?[0m: Don't know how to handle 'NET::Properties', use qRegisterMetaType to register it.
QWARN  : KWindowSystemX11Test::testWindowTitleChanged() kwindowsystemx11test(3760)/(default) ?[31mQSignalSpy::initArgs?[0m: Don't know how to handle 'NET::Properties2', use qRegisterMetaType to register it.
QWARN  : KWindowSystemX11Test::testWindowTitleChanged() kwindowsystemx11test(3760)/(default) ?[31mQSignalSpy::initArgs?[0m: Don't know how to handle 'WId', use qRegisterMetaType to register it.
QWARN  : KWindowSystemX11Test::testWindowTitleChanged() kwindowsystemx11test(3760)/(default) ?[31mQSignalSpy::initArgs?[0m: Don't know how to handle 'const ulong*', use qRegisterMetaType to register it.
QWARN  : KWindowSystemX11Test::testWindowTitleChanged() kwindowsystemx11test(3760)/(default) ?[31mQSignalSpy::initArgs?[0m: Don't know how to handle 'WId', use qRegisterMetaType to register it.
QWARN  : KWindowSystemX11Test::testWindowTitleChanged() kwindowsystemx11test(3760)/(default) ?[31mQSignalSpy::initArgs?[0m: Don't know how to handle 'WId', use qRegisterMetaType to register it.

That's what I just got when trying to write the unit test for window title changed. Maybe the signal doesn't get emitted because WId is not a known meta type?
Comment 12 Martin Flöser 2014-04-03 07:03:56 UTC
To those experiencing the bug: please provide xprop output of windows for 
which the title doesn't update. I noticed a small difference between KWin and 
openbox which might affect the situation.

To those experiencing the bug: which window manager are you using? I am 
assuming KWin. If you switched between a WM in the running session (e.g. KWin 
failed and you switched to openbox) please report. This might be very 
important.
Comment 13 Antonio Rojas 2014-04-03 09:34:58 UTC
This happens for me for tasks which were open before plasma-shell starts (because of session saving at startup, or because plasma-shell crashes). Titles and icons are not updated anymore for those tasks, and also the text dim status (if the task was minimized, the text stays dimmed)
Comment 14 Bhushan Shah 2014-04-03 15:34:26 UTC
┌┼─┼─ bshah @ archbox ─┤├─ 02:33:13 Fri Apr 04 ─┤├─ ~ ─┤ 
└┼─$─┤▶ xprop
_NET_WM_ICON_GEOMETRY(CARDINAL) = 79, 774, 250, 26
_KDE_NET_WM_ACTIVITIES(STRING) = "00000000-0000-0000-0000-000000000000"
_NET_WM_ALLOWED_ACTIONS(ATOM) = _NET_WM_ACTION_MOVE, _NET_WM_ACTION_RESIZE, _NET_WM_ACTION_MINIMIZE, _NET_WM_ACTION_SHADE, _NET_WM_ACTION_MAXIMIZE_VERT, _NET_WM_ACTION_MAXIMIZE_HORZ, _NET_WM_ACTION_FULLSCREEN, _NET_WM_ACTION_CHANGE_DESKTOP, _NET_WM_ACTION_CLOSE
_KDE_NET_WM_FRAME_STRUT(CARDINAL) = 2, 2, 23, 4
_NET_FRAME_EXTENTS(CARDINAL) = 2, 2, 23, 4
_NET_WM_DESKTOP(CARDINAL) = 0
WM_STATE(WM_STATE):
                window state: Normal
                icon window: 0x0
_NET_WM_STATE(ATOM) = 
WM_HINTS(WM_HINTS):
                Client accepts input or input focus: True
                Initial state is Normal State.
                bitmap id # to use for icon: 0x1e004ae
                bitmap id # of mask for icon: 0x1e004af
                window id # of group leader: 0x1e00001
XdndAware(ATOM) = BITMAP
_MOTIF_DRAG_RECEIVER_INFO(_MOTIF_DRAG_RECEIVER_INFO) = 0x6c, 0x0, 0x5, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x10, 0x0, 0x0, 0x0
_NET_WM_ICON(CARDINAL) =        Icon (64 x 64):
                                                                        
                                                                        
                                                                        
                                :i/)cccccccc1\!"                        
                             "/]vvcr]]]]]]rrvunnc\"                     
                           >]nnvccrrrrrrrrcccvuunzzci                   
                         <uzxuuvvvcccrrccccvvuunnxxzfn<                 
                       ^]jzxnnnuuvvvvvvvvvvuuunnxxzzjftc:               
                      >jfzzxxxnnnuuuuuuuuuuunnnxxzzjjffLt>              
                     )LtjjzzzxxxnnnnnnnnnnnnxxxzzzjjffttCJ1             
                    }CtfffjjzzzxxxxxxxxxxxxxxzzzjjfffttLLLU[            
                  .xJLtttfffjjjzzzzzzzzzzzzzzjjjffftttLLLCCYj.          
                  ]UCLLLtttfffjjjjjzjzzjzjjjjjffftttLLLCCJJJYr          
                 }YJCCLLLLtttffffffjjjjjjfffffttttLLLLCCJJJUUX}         
                !YJJJJCCLLLLtttttttffffffttttttLLLLCCCJJJUUUUYXl        
               "YXUUJJJJCCCLLLLLLtttttttttLLLLLLLCCCJJJJUUUYYYXU;       
              .{JXYUUUJJJJCCCCCLLLLLLLLLLLLLLCCCCJJJJJUUUYYYYYYXz.      
              <uvYXYUUUUJJJJJJCCCCCCCCCCCCCCCJJJJJJUUUUYYYYYYYYYXl      
             'rvcjZZYYUUUUUUJJJJJJJJJJJJJJJJJJJJUUUUUYYYYYYYYYYYXC'     
             iucccUZZYYYYUUUUUUUUJJf1<_,,_>?)}}}{{{{{{111111)))))1_     
            '[vcccnZZXYYYYYYYYUUUu<````''''''"!///????IIIIIllll!!!i'    
            -ucccccCZZXYYYYYYYYC\`',_l?((?l-`.'-??IIIIIllll!!ii>>>!"    
           .|vcccccuXZZXYYYYYYC_`,i1{1)))))11>.'^lIllll!!ii>>>>>>>!+.   
           `cvcccccctZZZXYYYYC_`;)[}{{1111{{}[(^'^l!!ii>>>>>>>>>>>i!`   
           -ucccccccvXZZZXYYY\`;[]][}}{{{{}}[[][^';>>>>>>>>>>>>>>>i!"   
          .?uccccccccfOZZZXYn,^{cr]][[[}}}[[]]rr{,'+>>>>>>>>>>>>>>i!_.  
          '1uccccccccvYOZZZX>,/vccrr]]][[[]]]rccvl':>>>>>>>>>>>>>>i!>'  
          `]ucccccccccj0OOZf,;nuvvccrrr]]rrrrccvuc,`+>>>>>>>>>>>>>i!!`  
          ,nvcccccccccvU0OO{^Innuuvvcccccccccvvunnl`~>>>>>>>>>>>>>iil,  
          ^nvccccccccccz000!^[xxnnuuvvvvvvvvvuunnx1`:>>>>>>>>>>>>iiil^  
          ^nvcccccccccccJQ0;^zzxxnnnuuuuuuuunnnxxzv`^>>>>>>>>>>>>iiiI^  
          ^nvvccccccccccnQQ:^fjzzxxxnnnnnnnnxxxzzjj`,>>>>>>>>>>>>iiiI^  
          ^nvvcccccccccccCo::ffjjzzzzxxxxxxxzzzjjff,,>>>>>>>>>>>>iiiI^  
          ^xvvcccccccccccv0~:tfffjjjjzzzzzzzjjjfffz,:>>>>>>>>>>>iii!I^  
          ^xvvccccccccccccLI:cttffffffjjjjjfffffftr,">>>>>>>>>>>iii!I^  
          ^xuvvcccccccccccc("{LLtttfffffffffffttLL/^->>>>>>>>>>iii!!?^  
          ^cnvvcccccccccccc]"_CCLLLttttttttttLLLCC~^<>>>>>>>>>>iii!II^  
          ,[xuvvcccccccccccc+"]JJCCCLLLLLLLLCCCJJ[^;>>>>>>>>>>iiii!Il,  
          `(zuvvcccccccccccc1;-CUUJJJJJCCJJJJJJUC;:+>>>>>>>>>>iii!l?i`  
          'iznuvvcccccccccccci;>JYYUUUUUUUUUUYYJ<:~>>>>>>>>>>iii!!l/+'  
          ."nxuvvcccccccccccc]+;iUXXYYYYYYYYXXJ>:->>>>>>>>>>iiii!lI/".  
           ^}znuvvcccccccccccc]<;<nZZZZZZZZZZc~"+?>>>>>>>>>iiii!ll/I^   
           `!jnuuvvcccccccccccc]i;;irL0000Lr+""!]>>>>>>>>>iiii!!lI\<`   
           .;nznuvvcccccccccccccc)+;;;;;;;;;;<]xI>>>>>>>>iiii!!lI?/;.   
            ,(jxnuvvvcccccccccccccc}?>~;;;i?rxz{>>>>>>>>iiiii!llI\l,    
            '-zjxnuvvvcccccccccccccccccccvunnxn!>>>>>>>iiiii!llI/|-'    
             ^|fxnnuvvvccccccccccccccccccvunnx|>>>>>>>iiii!!llI?|l^     
             '~nfxnnuvvvcccccccccccccccccvunnri>>>>>iiiii!!llI?||~'     
              ,!fjxnnuuvvvccccccccccccccvvunn?>>>>iiiiii!!lII?\(>,      
              ."(tzxnnuuvvvcccccccccccccvvun{>>iiiiiii!!llII?/(I".      
               '~rtzxxnnuvvvvvccccccccccvvuvliiiiiii!!!llI?/\(\~'       
                `_vtjzxnnuuvvvvvcccccccvvuu|iiiiii!!!llII?/\)|_`        
                 ,+jLjzxxnnuuuvvvvvvvccvuu]!ii!!!!lllII?//\))+,         
                  ^<uLfjzxxnnuuuuvvvvvvuuu/!!!!llllII??/\|)(<^          
                  .^+cCtjjzxxnnnuuuuuuunn}llllllIII?//\|)1|+^.          
                    ,_1LCfjjzzxxnnnnnnnnu?IIIII???//\||11/_,            
                     `~?jCLffjzzzxxxxnxx{?????///\\|(){1l~`             
                      '"<{LJLtffjjzzzzju\///\\\||((1{{\<"'              
                       .,~>[tJCLtffffff}|||||(()){}{|>~,.               
                         '^->|uLUJCCtLn)))))1{}}})?>-^'                 
                           ',;_i|rxfUUr}}}[[{1(/i_;,'                   
                             .`^"-+>!llllll!>+-"^`.                     
                                .'`,^^^^^^^^,`'.                        
                                                                        

        Icon (32 x 32):
                                        
                                        
                  -?)]]]]r{I:           
                <ruvcrrrcvunx]~         
              '[zxnuuvvvuunxzjf}'       
             "jfjjzxxnnnxxzzjftLu'      
            "fLttfjjjzzzjjjfttLCJx'     
           'xJCCLLttfffffttLLCJJUUz     
           IUUUJJCCLLLLLLLCCJJUUYYY|    
          ,cjZYUUJJJJLunnjjjfffffffx.   
          ?ccJZYYYUC\~+_+;>/\//?IIl!;   
          ]cczZZYYj~l{1))1i;IIl!ii>><   
         ;ccccYOZY<\][}{}[]?;i>>>>>>i.  
         !ccccn00civcr]]]]cv_+>>>>>>i^  
         /cccccYQi{nuvcccvun|">>>>>>i;  
         1vccccua;jzxnnuunxx}^>>>>>>i;  
         1vcccccU"fjjzzzzzjjr,>>>>>ii;  
         ?vcccccv_rtffffffft}:>>>>>i!;  
         luvccccc?iJCLLLLLCC>_>>>>ii!:  
         ~nvcccccc^nUUJJJUU]:>>>>>i!l'  
          uuvccccc1"[ZXXXU);i>>>>iil!   
          |nuvccccc]>~l{>;I\>>>>ii!I-   
          ,znvvcccccc])){xu!>>>ii!II.   
           \xnvvccccccccun/>>iii!I?~    
           'rznuvccccccvu}>iii!lI/!     
            "zznuuvvcccvvlii!!l?/I.     
             "njxnnuvvvn(!!llI/\?.      
              'rfjzxnnncII??/\(i.       
                <xtfjjj)\\|()I:         
                  -(uCn111?>,           
                                        
                                        

        Icon (16 x 16):
                        
            "}nunz["    
           1CfuuunLJ{   
          [XtfffftLCO]  
         :UXJUXvnLLLLX" 
         {nZZf ": iIil< 
         zrCa c[[1 >>>? 
         zrcf_zvvz>-i>? 
         jcc]<CjjC!-i>/ 
         fccu ZZZZ ii>\ 
         ]zcv{ II.>i>?l 
         ;tvcvu|1c>>i|, 
          1tvccvu>>!(i  
           {Cfux/!|1!   
            ;uYf1[\^    
                        


WM_WINDOW_ROLE(STRING) = "browser"
_KDE_OXYGEN_BACKGROUND_GRADIENT(CARDINAL) = 1
_KDE_NET_WM_USER_CREATION_TIME(CARDINAL) = 770276
_NET_WM_SYNC_REQUEST_COUNTER(CARDINAL) = 31458473
_NET_WM_WINDOW_TYPE(ATOM) = _NET_WM_WINDOW_TYPE_NORMAL
_NET_WM_USER_TIME(CARDINAL) = 1953122
_NET_WM_USER_TIME_WINDOW(WINDOW): window id # 0x1e004a8
WM_CLIENT_LEADER(WINDOW): window id # 0x1e00001
_NET_WM_PID(CARDINAL) = 1185
WM_LOCALE_NAME(STRING) = "C"
WM_CLIENT_MACHINE(STRING) = "archbox"
WM_NORMAL_HINTS(WM_SIZE_HINTS):
                program specified minimum size: 204 by 63
                window gravity: NorthWest
WM_PROTOCOLS(ATOM): protocols  WM_DELETE_WINDOW, WM_TAKE_FOCUS, _NET_WM_PING, _NET_WM_SYNC_REQUEST
WM_CLASS(STRING) = "google-chrome-stable", "Google-chrome-stable"
WM_ICON_NAME(STRING) = "[plasma-shell] [Bug 331956] taskbar entry title not always updating - bhush94@gmail.com - Gmail - Google Chrome"
_NET_WM_ICON_NAME(UTF8_STRING) = "[plasma-shell] [Bug 331956] taskbar entry title not always updating - bhush94@gmail.com - Gmail - Google Chrome"
WM_NAME(STRING) = "[plasma-shell] [Bug 331956] taskbar entry title not always updating - bhush94@gmail.com - Gmail - Google Chrome"
_NET_WM_NAME(UTF8_STRING) = "[plasma-shell] [Bug 331956] taskbar entry title not always updating - bhush94@gmail.com - Gmail - Google Chrome"
Comment 15 David Edmundson 2014-04-03 15:44:39 UTC
*** Bug 333030 has been marked as a duplicate of this bug. ***
Comment 16 David Edmundson 2014-04-03 15:48:57 UTC
Reported again, reopening.
Comment 17 Marco Martin 2014-04-10 11:54:55 UTC
since some days, I can't reproduce this anymore, even with stupid chromium,
anybody else confirms it's fixed?
Comment 18 Eike Hein 2014-04-10 11:56:46 UTC
I haven't seen it anymore either. Let's take another attempt at closing it ..
Comment 19 Antonio Rojas 2014-04-10 12:02:06 UTC
Still happening here with plasma-* compiled from yesterday, after killing and restarting plasma-shell nothing is updated anymore
Comment 20 Eike Hein 2014-04-10 12:03:14 UTC
Antonio, could you try updating Qt to latest stable branch?
Comment 21 Martin Klapetek 2014-04-10 12:32:22 UTC
I still can reproduce as well, it might be slightly older Qt here though so I'll try to update that to latest stable and retest.

Also this usually happens if plasma is (re)started after the app has been started, so if I have Chrome opened and start plasma-shell, it does not work (or if plasma restarts after a crash).
Comment 22 Eike Hein 2014-04-15 07:46:05 UTC
*** Bug 333430 has been marked as a duplicate of this bug. ***
Comment 23 Martin Klapetek 2014-05-06 09:45:31 UTC
Still happening here with today's build.

I'm using kwin5 (latest) and all of plasma is also latest. I have Chrome opened, I started plasma-shell with kwin4, it was working, then I started kwin5 and it stopped working (I test by simply changing the tabs in Chrome). xprop of Chrome (without the icon) below.

I tried simply restarting Chrome after kwin5 & plasma-shell were both running, then it worked correctly. So it seems like it's only when it's picking up an existing application on startup --> adding xprop of Chrome started /after/ plasma & kwin.

$ xprop (Chrome running before plasma & kwin)
WM_STATE(WM_STATE):
                window state: Normal
                icon window: 0x0
_NET_WM_ICON_GEOMETRY(CARDINAL) = 36, 1168, 253, 32
_KDE_NET_WM_ACTIVITIES(STRING) = "00000000-0000-0000-0000-000000000000"
_NET_WM_ALLOWED_ACTIONS(ATOM) = _NET_WM_ACTION_MOVE, _NET_WM_ACTION_RESIZE, _NET_WM_ACTION_MINIMIZE, _NET_WM_ACTION_MAXIMIZE_VERT, _NET_WM_ACTION_MAXIMIZE_HORZ, _NET_WM_ACTION_FULLSCREEN, _NET_WM_ACTION_CHANGE_DESKTOP, _NET_WM_ACTION_CLOSE
_NET_WM_DESKTOP(CARDINAL) = 0
_NET_WM_STATE(ATOM) = _NET_WM_STATE_MAXIMIZED_VERT, _NET_WM_STATE_MAXIMIZED_HORZ
WM_HINTS(WM_HINTS):
                Client accepts input or input focus: True
                Initial state is Normal State.
                bitmap id # to use for icon: 0x1a00093
                bitmap id # of mask for icon: 0x1a00094
                window id # of group leader: 0x1a00001
_GTK_HIDE_TITLEBAR_WHEN_MAXIMIZED(CARDINAL) = 1
XdndAware(ATOM) = BITMAP
_MOTIF_DRAG_RECEIVER_INFO(_MOTIF_DRAG_RECEIVER_INFO) = 0x6c, 0x0, 0x5, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x10, 0x0, 0x0, 0x0
_MOTIF_WM_HINTS(_MOTIF_WM_HINTS) = 0x2, 0x0, 0x0, 0x0, 0x0
WM_WINDOW_ROLE(STRING) = "browser"
_KDE_OXYGEN_BACKGROUND_GRADIENT(CARDINAL) = 1
_NET_WM_SYNC_REQUEST_COUNTER(CARDINAL) = 27263117
_NET_WM_WINDOW_TYPE(ATOM) = _NET_WM_WINDOW_TYPE_NORMAL
_NET_WM_USER_TIME(CARDINAL) = 6431062
_NET_WM_USER_TIME_WINDOW(WINDOW): window id # 0x1a0008c
WM_CLIENT_LEADER(WINDOW): window id # 0x1a00001
_NET_WM_PID(CARDINAL) = 2365
WM_LOCALE_NAME(STRING) = "en_US.UTF-8"
WM_CLIENT_MACHINE(STRING) = "eniac"
WM_NORMAL_HINTS(WM_SIZE_HINTS):
                program specified minimum size: 177 by 63
                window gravity: NorthWest
WM_PROTOCOLS(ATOM): protocols  WM_DELETE_WINDOW, WM_TAKE_FOCUS, _NET_WM_PING, _NET_WM_SYNC_REQUEST
WM_CLASS(STRING) = "google-chrome-stable", "Google-chrome-stable"
WM_ICON_NAME(COMPOUND_TEXT) = "Bug 331956 – taskbar entry title not always updating - Google Chrome"
_NET_WM_ICON_NAME(UTF8_STRING) = "Bug 331956 – taskbar entry title not always updating - Google Chrome"
WM_NAME(COMPOUND_TEXT) = "Bug 331956 – taskbar entry title not always updating - Google Chrome"
_NET_WM_NAME(UTF8_STRING) = "Bug 331956 – taskbar entry title not always updating - Google Chrome"


=========================================================================================

$ xprop (Chrome started after plasma & kwin)
_NET_WM_ICON_GEOMETRY(CARDINAL) = 31, 1174, 250, 26
_KDE_NET_WM_ACTIVITIES(STRING) = "00000000-0000-0000-0000-000000000000"
WM_STATE(WM_STATE):
                window state: Normal
                icon window: 0x0
_NET_WM_ALLOWED_ACTIONS(ATOM) = _NET_WM_ACTION_MOVE, _NET_WM_ACTION_RESIZE, _NET_WM_ACTION_MINIMIZE, _NET_WM_ACTION_MAXIMIZE_VERT, _NET_WM_ACTION_MAXIMIZE_HORZ, _NET_WM_ACTION_FULLSCREEN, _NET_WM_ACTION_CHANGE_DESKTOP, _NET_WM_ACTION_CLOSE
_NET_WM_STATE(ATOM) = _NET_WM_STATE_MAXIMIZED_VERT, _NET_WM_STATE_MAXIMIZED_HORZ
_NET_WM_DESKTOP(CARDINAL) = 0
WM_HINTS(WM_HINTS):
                Client accepts input or input focus: True
                Initial state is Normal State.
                bitmap id # to use for icon: 0x16000e1
                bitmap id # of mask for icon: 0x16000e2
                window id # of group leader: 0x1600001
_GTK_HIDE_TITLEBAR_WHEN_MAXIMIZED(CARDINAL) = 1
XdndAware(ATOM) = BITMAP
_MOTIF_DRAG_RECEIVER_INFO(_MOTIF_DRAG_RECEIVER_INFO) = 0x6c, 0x0, 0x5, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x10, 0x0, 0x0, 0x0
_MOTIF_WM_HINTS(_MOTIF_WM_HINTS) = 0x2, 0x0, 0x0, 0x0, 0x0
WM_WINDOW_ROLE(STRING) = "browser"
_KDE_OXYGEN_BACKGROUND_GRADIENT(CARDINAL) = 1
_KDE_NET_WM_USER_CREATION_TIME(CARDINAL) = 6766991
_NET_WM_SYNC_REQUEST_COUNTER(CARDINAL) = 23068891
_NET_WM_WINDOW_TYPE(ATOM) = _NET_WM_WINDOW_TYPE_NORMAL
_NET_WM_USER_TIME(CARDINAL) = 6900891
_NET_WM_USER_TIME_WINDOW(WINDOW): window id # 0x16000da
WM_CLIENT_LEADER(WINDOW): window id # 0x1600001
_NET_WM_PID(CARDINAL) = 17397
WM_LOCALE_NAME(STRING) = "en_US.UTF-8"
WM_CLIENT_MACHINE(STRING) = "eniac"
WM_NORMAL_HINTS(WM_SIZE_HINTS):
                program specified minimum size: 177 by 63
                window gravity: NorthWest
WM_PROTOCOLS(ATOM): protocols  WM_DELETE_WINDOW, WM_TAKE_FOCUS, _NET_WM_PING, _NET_WM_SYNC_REQUEST
WM_CLASS(STRING) = "google-chrome-stable", "Google-chrome-stable"
WM_ICON_NAME(COMPOUND_TEXT) = "Bug 331956 – taskbar entry title not always updating - Google Chrome"
_NET_WM_ICON_NAME(UTF8_STRING) = "Bug 331956 – taskbar entry title not always updating - Google Chrome"
WM_NAME(COMPOUND_TEXT) = "Bug 331956 – taskbar entry title not always updating - Google Chrome"
_NET_WM_NAME(UTF8_STRING) = "Bug 331956 – taskbar entry title not always updating - Google Chrome"
Comment 24 Martin Klapetek 2014-05-06 10:05:21 UTC
Additional info: window titlebar updates properly as expected, yet the task applet text does not.
Comment 25 Eike Hein 2014-05-06 10:11:23 UTC
Since I can't seem to easily reproduce this, could you perhaps instrument TaskManager::windowChanged() in plasma-workspace/libs/taskmanager to find out whether KWindowSystem::windowChanged() fires, and see if it ever winds up inside a Task::refresh()? This code is unchanged from KDE 4, but it would be nice to rule out libtaskmanager and the applet for good I think ...
Comment 26 Martin Klapetek 2014-05-06 10:37:53 UTC
In normal state, where everything works, it's getting there just fine.

When in the bug state, I don't get windowChanged() at all for any window, except if I press "enter" in yakuake, but it does not go into Task::refresh() (which is obvious for Yakuake as it's not in the taskbar). This usually happens when starting kwin, I suggest trying to restart kwin couple times.
Comment 27 Eike Hein 2014-05-06 10:38:36 UTC
Alright, that means the problem must be somewhere in KWindowSystem or below it in the stack.
Comment 28 Leszek Lesner 2014-05-14 12:24:08 UTC
Maybe related or not. Titles dissappear completely when dragging around the panel. (Ignore the visual glitches which are a different problem here) 

Video demo: http://youtu.be/q0r1cXgVK5Q
Comment 29 Martin Flöser 2014-05-15 06:02:29 UTC
Possible fix: https://git.reviewboard.kde.org/r/118137/
Comment 30 Martin Flöser 2014-05-15 15:32:31 UTC
Git commit 5e057da091d506f17c390935dbd2194277dd48f1 by Martin Gräßlin.
Committed on 15/05/2014 at 05:53.
Pushed by graesslin into branch 'master'.

Do not overwrite event mask in WindowThumbnailItem

The WindowThumbnail needs XCB_EVENT_MASK_STRUCTURE_NOTIFY on the window.
For this it needs to change the window attributes. But it needs to keep
the existing event mask to not break other code. Also it cannot remove
the event mask again, as there is no chance to know whether another
component requires STRUCTURE_NOTIFY.

This fixes the not updating items in the tasks applet as the event mask
needed for KWindowSystem got overwritten.
REVIEW: 118137

M  +11   -5    src/declarativeimports/core/windowthumbnail.cpp

http://commits.kde.org/plasma-framework/5e057da091d506f17c390935dbd2194277dd48f1
Comment 31 Bhushan Shah 2014-05-15 15:36:42 UTC
Thank you for fixing.. /me passes a cookie.. :)